--- a/UDiffText_colab.ipynb
+++ b/UDiffText_colab.ipynb
@@ -20,9 +20,10 @@
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/UDiffText-hf\n",
         "\n",
-        "!pip install -q einops gradio pytorch-fid\n",
+        "!pip install -q einops==0.6.1 gradio==3.41.0 pytorch-fid==0.3.0 huggingface-hub==0.19.4\n",
         "!pip install -q https://download.pytorch.org/whl/cu118/xformers-0.0.22.post4%2Bcu118-cp310-cp310-manylinux2014_x86_64.whl\n",
-        "!pip install -q img2dataset kornia lpips omegaconf open-clip-torch pytorch-lightning timm\n",
+        "!pip install -q img2dataset==1.42.0 kornia==0.6.9 lpips==0.1.4 omegaconf==2.3.0 open-clip-torch==2.20.0 pytorch-lightning==2.0.1 timm==0.9.2\n",
+        "# !pip uninstall -y lightning-fabric\n",
         "\n",
         "!apt -y install -qq aria2\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/UDiffText/resolve/main/AE_inpainting_2.safetensors -d /content/UDiffText-hf/checkpoints/AEs -o AE_inpainting_2.safetensors\n",
